--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>My test page</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="scripts/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Bienvenue</h1>
-    <img src="logo 1.png">
+    <img src="scripts/logo 1.png">
 	
     <p>"Les bras cassés" est une association venant en aide aux sportifs en situations de handicap, nos principes sont les suivants : </p>
 
