--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Bienvenue</h1>
-    <img src="../scripts/logo 1.png">
+    <img src="logo 1.png">
 	
     <p>"Les bras cassés" est une association venant en aide aux sportifs en situations de handicap, nos principes sont les suivants : </p>
 
