--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Bienvenue</h1>
-    <img src="logo 1.png">
+    <img src="../scripts/logo 1.png">
 	
     <p>"Les bras cassés" est une association venant en aide aux sportifs en situations de handicap, nos principes sont les suivants : </p>
 
@@ -23,7 +23,7 @@
     <p>Allez voir <a href="https://www.paralympic.org/">Paralympic.org</a>
 	pour bâtir un avenir où chaque sportif handicapé peut réaliser ses ambitions, en brisant les barrières et redéfinissant les limites du possible. Rejoignez-nous pour faire de l'inclusion, de l'égalité et de la victoire des réalités quotidiennes.</p>
   <button>Change user</button>
-  <script src="main.js"></script>
+  <script src="../scripts/main.js"></script>
   </body>
 </html>
 
