--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>My test page</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-    <link href="../scripts/style.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Bienvenue</h1>
-    <img src="../scripts/logo 1.png">
+    <img src="logo 1.png">
 	
     <p>"Les bras cassés" est une association venant en aide aux sportifs en situations de handicap, nos principes sont les suivants : </p>
 
@@ -23,7 +23,7 @@
     <p>Allez voir <a href="https://www.paralympic.org/">Paralympic.org</a>
 	pour bâtir un avenir où chaque sportif handicapé peut réaliser ses ambitions, en brisant les barrières et redéfinissant les limites du possible. Rejoignez-nous pour faire de l'inclusion, de l'égalité et de la victoire des réalités quotidiennes.</p>
   <button>Change user</button>
-  <script src="../scripts/main.js"></script>
+  <script src="main.js"></script>
   </body>
 </html>
 
